sample/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nodeapp-deployment
spec:
  selector:
    matchLabels:
      app: nodeapp
  replicas: 5 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
      - name: nodeapp
        image: saravit/swarm-example
        ports:
        - containerPort: 3000
