sample/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodeapp
  name: nodeapp-svc
  namespace: default
spec:
  type: ClusterIP  # use NodePort|LoadBalancer|ClusterIP as type here
  #loadBalancerIP: 192.168.0.6
  ports:
    - port: 3000
      targetPort: 3000
      # nodePort: 30001
  selector:
    app: nodeapp
