sample/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nodeapp-ingress
 namespace: default
 annotations:
  kubernetes.io/ingress.class: "nginx"
spec:
 rules:
 - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: nodeapp-svc
           port: 
             number: 3000
